--- a/web development/css-my-site/css/style.css
+++ b/web development/css-my-site/css/style.css
@@ -1,22 +1,54 @@
 body {
-    margin: 0px;
-}
-h1{
-    margin-top: 0px;
-
-}
-.top-container{
-    background-color: #e4f9f5;
-
-}
-
-.middle-container {
-    background-color: turquoise;
-    height: 200px;
-    width: 200px;
-}
-.bottom-container{
-    background-color: darkorchid;
-    height: 200px;
-    width: 200px;
-}
+    color: #40514E;
+    margin: 0;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+  }
+  
+  h1 {
+    color: #66BFBF;
+    font-size: 5rem;
+    margin: 50px auto 0 auto;
+    font-family: 'Sacramento', cursive;
+  }
+  
+  h2 {
+    color: #66BFBF;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    font-weight: normal;
+    padding-bottom: 10px;
+  }
+  
+  h3 {
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+  }
+  
+  p {
+    line-height: 2;
+  }
+  
+  hr {
+    border: dotted #EAF6F6 6px;
+    border-bottom: none;
+    width: 4%;
+    margin: 100px auto;
+  }
+  
+  a{
+    color: #11999E;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: #EAF6F6;
+  }
+  
+  .top-container {
+    background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
+  }
